--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "engines": {
     "npm": "6.12.1",
     "node": "12.13.1",
-  "homepage": "https://budgecalc.herokuapp.com/",
+    "homepage": "."
+
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
