--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "npm": "6.12.1",
     "node": "12.13.1",
-    "homepage": "."
+    "homepage": "https://budgecalc.herokuapp.com/.index.html"
 
   },
   "dependencies": {
