--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "engines": {
     "npm": "6.12.1",
     "node": "12.13.1",
-    "homepage": "https://budgecalc.herokuapp.com/.index.html"
-
+    "homepage": "https://agomez99.github.io/react_budget_tracker/"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,6 +16,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
