--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "npm": "6.12.1",
     "node": "12.13.1",
-    "homepage": "https://agomez99.github.io/react_budget_tracker/"
+    "homepage": "https://agomez99.github.io/"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
